# src/BackEnd/Api/app/Http/Controllers/Admin/AppointmentController.php
@@ -217,7 +217,13 @@ class AppointmentController extends Controller
             ));
         }
         $data = (object) $request->all();
-        return json_encode($this->appointmentRepository->GetWorktime($data)->get());
+        return json_encode(
+            array(
+                'status' => 200,
+                'msg' => '获取列表成功!',
+                'data' => $this->appointmentRepository->GetWorktime($data)->get(),
+            )
+        );
     }
 
     
@@ -297,9 +303,81 @@ class AppointmentController extends Controller
                 'data' => $validator->errors(),
             ));
         }
-        $data = (object) $request->all();
+        $data = (object) $request->all();        
         return json_encode($this->appointmentRepository->TransferAppt($data));
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/admin/appt/changeState",
+     *     tags={"门店管理系统-预约管理"},
+     *     summary="待接取订单客户不点击完成时门店点击完成",
+     *     @OA\Parameter(name="token", in="header", @OA\Schema(type="string"), required=true, description="token"),
+     *     @OA\RequestBody(
+     *     @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *         @OA\Schema(
+     *           @OA\Property(description="套餐编号", property="orderId", type="string", default="dd"),
+     *           required={"orderId","state"})
+     *       )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="成功",
+     *         @OA\JsonContent(
+     *            type="object",
+     *            @OA\Property(
+     *                   example="200",
+     *                   property="status",
+     *                   description="状态码",
+     *                   type="number",
+     *               ),
+     *            @OA\Property(
+     *                  type="string",
+     *                  property="msg",
+     *                  example="成功!",
+     *              )
+     *         ),
+     *     ),
+     *      @OA\Response(
+     *         response=500,
+     *         description="失败",
+     *         @OA\JsonContent(
+     *            type="object",
+     *            @OA\Property(
+     *                   example="500",
+     *                   property="status",
+     *                   description="状态码",
+     *                   type="number",
+     *               ),
+     *           @OA\Property(
+     *                  type="string",
+     *                  property="msg",
+     *                  example="失败!",
+     *               )
+     *           )
+     *       ),
+     * )
+     */
+    public function ChangeState(Request $request)
+    {
+        $rules = [
+            'orderId' => ['required', Rule::exists('orders', 'id')->where(function ($query) use ($request) {
+                $query->where('state', '400');
+            })],
+        ];
+        $messages = [];
+        $validator = Validator::make($request->all(), $rules, $messages);
+        if ($validator->fails()) {
+            return json_encode(array(
+                'status' => 500,
+                'msg' => '验证失败!',
+                'data' => $validator->errors(),
+            ));
+        }
+        $data = (object) $request->all();
+        $data->state = 500;
+        return json_encode($this->appointmentRepository->ChangeState($data));
+    }
 
 }
